k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: ${NAMESPACE}
  labels:
    app: tc-oficina

spec:
  replicas: 2

  selector:
    matchLabels:
      app: tc-oficina

  template:
    metadata:
      labels:
        app: tc-oficina

    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: app
          image: ${ECR_IMAGE}
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
