k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: ${NAMESPACE}
  labels:
    app: tc-oficina-auth

spec:
  replicas: 2

  selector:
    matchLabels:
      app: tc-oficina-auth

  template:
    metadata:
      labels:
        app: tc-oficina-auth

    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: auth
          image: ${AUTH_IMAGE}
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
