k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: tc-oficina-auth
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
