k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: tc-oficina
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
